--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ html {
     font-size: calc(16px + 0.5vw);
     font-family: 'Nunito', sans-serif;
 }
+body {
+    margin: 0;
+    padding: 0;
+}
 .app-wrapper {
     height: 100vh;
     width: 100vw;
