--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
     background-color: var(--tan);
     color: var(--black);
     display: grid;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-rows: auto 1fr auto;
     grid-template-columns: 1fr;
     grid-template-areas:
         "header"
