--- a/main.css
+++ b/main.css
@@ -35,11 +35,17 @@ body {
     color: var(--white);
 }
 label {
-    margin-right: 0;
-    margin-left: auto;
+    text-align: right;
+    display: block;
 }
 input {
-    padding: 15px 15px 15px 15px;
+    padding: 10px 10px 10px 10px;
+    border: none;
+    font-size-adjust: 0.7;
+}
+form table {
+    margin-left: auto;
+    margin-right: auto;
 }
 .app-wrapper.dark input[class="text"] {
     background-color: var(--dark-tan);
