--- a/templates/signup.latte
+++ b/templates/signup.latte
@@ -11,5 +11,5 @@
 {/block}
 
 {block footer}
-    <p>(App navigation tabs will go here, probably.)</p>
+    <p style="text-align:center;">(App navigation tabs will go here, probably.)</p>
 {/block}
