--- a/templates/signup.latte
+++ b/templates/signup.latte
@@ -5,9 +5,11 @@
 {/block}
 
 {block main}
-    {$form_msg}
-    {$form->render()}
-    {$form_result}
+    <div class="form-wrapper">
+        {$form_msg}
+        {$form->render()}
+        {$form_result}
+    <div>
 {/block}
 
 {block footer}
