--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@ main {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 .app-wrapper.dark footer {
