--- a/main.css
+++ b/main.css
@@ -75,12 +75,19 @@ header {
 main {
     grid-area: main;
 }
+.form-msg {
+    margin-bottom: 6px;
+}
+.debug-msg {
+    font-size-adjust: 0.4;
+}
 .form-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .app-wrapper.dark footer {
     background-color: rgba(0, 0, 0, 0.2);
