--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ html {
     background-color: var(--blue); /* sets scrollbar color in firefox */
     margin: 0;
     padding: 0;
-    font-size: calc(16px + 0.5vw);
+    font-size: calc(18px + 0.5vw);
     font-family: 'Nunito', sans-serif;
 }
 body {
@@ -37,13 +37,13 @@ body {
 label {
     text-align: left;
     display: block;
-    font-size-adjust: 0.4;
+    font-size: 20px;
 }
 input {
     padding: 10px 10px 10px 10px;
     border: none;
-    font-size-adjust: 0.7;
     appearance: none;
+    font-size: 20px;
     -webkit-appearance: none;
     -moz-appearance: none;
 }
@@ -53,10 +53,9 @@ fieldset {
 legend {
     font-weight: bold;
 }
-/* form {
-    display: block;
-    width: 100%;
-} */
+form {
+    width: 50%;
+}
 form table {
     margin-left: auto;
     margin-right: auto;
@@ -70,12 +69,17 @@ input[class="text"] {
     color: var(--black);
     border-radius: 10px;
     margin-bottom: 12px;
+    width:100%;
 }
 input[class="button"] {
     background-color: var(--blue);
     color: var(--black);
     border-radius: 999px;
     font-weight: bold;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 header {
     grid-area: header;
@@ -94,7 +98,7 @@ main {
     text-align: center;
 }
 .debug-msg {
-    font-size-adjust: 0.3;
+    font-size: 10px;
     opacity: 0.5;
     text-align: center;
 }
@@ -121,7 +125,7 @@ p {
 }
 h1 {
     text-align: center;
-    font-size-adjust: 0.3;
+    font-size: 32px;
 }
 p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
