--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ input[class="text"] {
     color: var(--black);
     border-radius: 10px;
     margin-bottom: 12px;
-    width:100%;
+    width:auto;
 }
 input[class="button"] {
     background-color: var(--blue);
