--- a/main.css
+++ b/main.css
@@ -56,7 +56,9 @@ legend {
     font-weight: bold;
 }
 form {
-    width: 100%;
+    width: calc(100% - 24px);
+    margin-left: 12px;
+    margin-right: 12px;
 }
 form table {
     margin-left: auto;
@@ -112,8 +114,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left:12px;
-    margin-right:12px;
 }
 .app-wrapper.dark footer {
     background-color: rgba(0, 0, 0, 0.2);
