--- a/main.css
+++ b/main.css
@@ -72,9 +72,11 @@ input[class="text"] {
     background-color: var(--tan);
     color: var(--black);
     border-radius: 10px;
-    margin-bottom: 12px;
     width:100%;
     box-sizing:border-box;
+}
+div.form-text {
+    margin-bottom: 12px;
 }
 input[class="button"] {
     background-color: var(--blue);
@@ -114,6 +116,10 @@ main {
 .form-wrapper::before {
     margin: auto;
     content: '';
+}
+span.error {
+    color: var(--red);
+    font-size: 18px;
 }
 .form-wrapper {
     width: 100%;
