--- a/templates/html.latte
+++ b/templates/html.latte
@@ -3,7 +3,7 @@
     <head>
         <title>Squad On Site</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">\
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
