--- a/main.css
+++ b/main.css
@@ -121,6 +121,11 @@ span.error {
     color: var(--red);
     font-size: 18px;
 }
+iframe {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+}
 .form-wrapper {
     width: 100%;
     height: 100%;
