--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -2,11 +2,11 @@
 
 {block main}
     <div n:if="$form" class="form-wrapper">
-        {$form->render()}
+        {$form??->render()}
     </div>
     <ul n:if="$chat_messages">
         {foreach $chat_messages as $message}
-            <li id="item-{$iterator->counter}">
+            <li id="item-{$iterator??->counter??}">
                 <h6>{$item??->username??}</h6>
                 <p>{$item??->message??}</p>
             </li>
