--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -5,11 +5,9 @@
         {$form??->render()}
     </div>
     <ul n:if="$chat_messages">
-        {foreach ($chat_messages as $message)}
-            <li id="item-{$iterator??->counter??}">
-                <h6>{$item??->username??}</h6>
-                <p>{$item??->message??}</p>
-            </li>
-        {/foreach}
+        <li n:foreach="$chat_messages as $item">
+            <h6>{$item??->username??}</h6>
+            <p>{$item??->message??}</p>
+        </li>
     </ul>
 {/block}
