allow site to work regardless of root url

--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -5,7 +5,7 @@
 {/block}
 
 {block main}
-    <iframe src="{$siteroot}chat-view.php" title="Chat View" allowtransparency="true"></iframe>
+    <iframe src="{$siteroot}/chat-view.php" title="Chat View" allowtransparency="true"></iframe>
 {/block}
 
 {block footer}
