--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -7,10 +7,12 @@
         {$form??->render()}
     </div>
     <ul n:if="$chat_messages">
-        <li n:foreach="$chat_messages as $item">
-            <h6>{$item->username}</h6>
-            <p>{$item->message}</p>
-        </li>
+        {foreach $chat_messages as $message => $item}
+            <li>
+                <h6>{$item->username}</h6>
+                <p>{$item->message}</p>
+            </li>
+        {/foreach}
     </ul>
 {/block}
 
