--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -7,9 +7,9 @@
         {$form??->render()}
     </div>
     <ul n:if="$chat_messages">
-        {foreach $chat_messages as $message => $item}
+        {foreach $chat_messages as $item}
             <li>
-                <h6>{$item}</h6>
+                <h6>{$item->username}</h6>
                 <p>{$item->message}</p>
             </li>
         {/foreach}
