--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -6,13 +6,11 @@
     <div n:if="$form" class="form-wrapper">
         {$form??->render()}
     </div>
-    <ul n:if="!empty($chat_messages)">
-        {foreach $chat_messages as $item}
-            <li>
-                <h6>{$item['username']}</h6>
-                <p>{$item['message']}</p>
-            </li>
-        {/foreach}
+    <ul n:if="!empty($chat_messages)" n:foreach="$chat_messages as $item">
+        <li>
+            <h6>{$item['username']}</h6>
+            <p>{$item['message']}</p>
+        </li>
     </ul>
 {/block}
 
