--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -11,8 +11,8 @@
     </p>
     <ul n:if="!empty($chat_messages)" n:foreach="$chat_messages as $item">
         <li>
-            <h6>{$item->username}</h6>
-            <p>{$item->message}</p>
+            <h6>{$item['username']}</h6>
+            <p>{$item['message']}</p>
         </li>
     </ul>
 {/block}
