--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -9,11 +9,13 @@
     <p n:if="!empty($chat_messages)">
         {toString($chat_messages)}
     </p>
-    <ul n:if="!empty($chat_messages)" n:foreach="$chat_messages? as $item">
+    <ul n:if="!empty($chat_messages)">
+    {foreach $chat_messages as $item => $item}
         <li>
             <h6>{$item['username']}</h6>
             <p>{$item['message']}</p>
         </li>
+    {/foreach}
     </ul>
 {/block}
 
