--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -6,14 +6,14 @@
     <div n:if="$form" class="form-wrapper">
         {$form??->render()}
     </div>
-    <p n:if="!empty($chat_messages)">
+    <p n:if="$chat_messages">
         {toString($chat_messages)}
     </p>
-    <ul n:if="!empty($chat_messages)">
+    <ul n:if="$chat_messages">
     {foreach $chat_messages as $item => $item}
         <li>
-            <h6>{$item['username']}</h6>
-            <p>{$item['message']}</p>
+            <h6>{$item->username}</h6>
+            <p>{$item->message}</p>
         </li>
     {/foreach}
     </ul>
