--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -6,8 +6,13 @@
     <div n:if="$form" class="form-wrapper">
         {$form??->render()}
     </div>
-    <ul>
-        {echo $chat_messages}
+    <ul n:if="!empty($chat_messages)">
+    {foreach $chat_messages as $item => $item}
+        <li>
+            <h6>{$item->username}</h6>
+            <p>{$item->message}</p>
+        </li>
+    {/foreach}
     </ul>
 {/block}
 
