--- a/templates/chat-view.latte
+++ b/templates/chat-view.latte
@@ -7,7 +7,7 @@
         {$form??->render()}
     </div>
     <ul n:if="!empty($chat_messages)">
-    {foreach $chat_messages as $item => $item}
+    {foreach $chat_messages as $item}
         <li>
             <h6>{$item->username}</h6>
             <p>{$item->message}</p>
