--- a/main.css
+++ b/main.css
@@ -157,3 +157,18 @@ h1 {
 p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
+ul {
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+}
+li {
+    background-color: var(--tan);
+    color: var(--black);
+    padding: 10px;
+    border-radius: 20px;
+    margin: 10px;
+}
+li h6 {
+    font-weight:bold;
+}
