--- a/templates/login-screen.latte
+++ b/templates/login-screen.latte
@@ -1,7 +1,7 @@
 {layout 'html.latte'}
 
 {block header}
-    <h1>Sign Up</h1>
+    <h1>Log In</h1>
 {/block}
 
 {block main}
@@ -13,5 +13,5 @@
 {/block}
 
 {block footer}
-    <p style="text-align:center;">Already registered? <a href="{$siteroot}/login-screen.php">Log In</a>.</p>
+    <p style="text-align:center;">Not registered? <a href="{$siteroot}/signup-screen.php">Sign Up</a>.</p>
 {/block}
