--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -13,6 +13,11 @@
      obj.contentDocument.body;
 	    obj.scrollTop = obj.scrollHeight;
     } , 2000);
+    setInterval(function(){
+	 var obj = document.getElementById("chat-view");
+     obj.contentDocument.body;
+	    obj.scrollTop = obj.scrollHeight;
+    } , 2100);
     </script>
 {/block}
 
