--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -12,12 +12,12 @@
      obj.src = obj.src;
      obj.contentDocument.body;
 	    obj.scrollTop = obj.scrollHeight;
-    } , 2000);
+    } , 5000);
     setInterval(function(){
 	 var obj = document.getElementById("chat-view");
      obj.contentDocument.body;
-	    obj.scrollTop = obj.scrollHeight;
-    } , 2100);
+	    obj.scrollTop = 999999999999999;
+    } , 5500);
     </script>
 {/block}
 
