--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -10,14 +10,11 @@
     setInterval(function(){
 	 var obj = document.getElementById("chat-view");
      obj.src = obj.src;
-     obj.contentDocument.body;
-	    obj.scrollTop = obj.scrollHeight;
-    } , 5000);
+    }, 5000);
     setInterval(function(){
 	 var obj = document.getElementById("chat-view");
-     obj.contentDocument.body;
-	    obj.scrollTop = 999999999999999;
-    } , 5500);
+     obj.contentDocument.body.scrollTop = 999999999999999;
+     }, 5500);
     </script>
 {/block}
 
