--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -13,7 +13,7 @@
     }, 5000);
     setInterval(function(){
 	 var obj = document.getElementById("chat-view");
-     obj.contentDocument.body.scrollTop = 999999999999999;
+     obj.contentDocument.body.scrollTop = obj.contentDocument.body.scrollHeight;
      }, 5500);
     </script>
 {/block}
