--- a/templates/refreshing_html.latte
+++ b/templates/refreshing_html.latte
@@ -3,7 +3,7 @@
     <head>
         <title>Squad On Site</title>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="4000">
+        <meta http-equiv="refresh" content="10;">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <style>
