--- a/templates/tabbar.latte
+++ b/templates/tabbar.latte
@@ -1,20 +1,20 @@
 <nav>
     <div class="tabbar">
         <div>
-            <a href="{$links['events']}" title="Events" aria-label="Events">
+            <a href="#" title="Events" aria-label="Events">
                 <i class="fa fa-calendar-day fa-2x">
                 
                 </i>
             </a>
         </div>
         <div>
-            <a href="{$links['chats']}" title="Chats" aria-label="Chats">
+            <a href="#" title="Chats" aria-label="Chats">
                 <i class="fa fa-comment fa-2x">
                 </i>
             </a>
         </div>
         <div>
-            <a href="{$links['news']}" title="News" aria-label="News">
+            <a href="#" title="News" aria-label="News">
                 <i class="fa fa-newspaper fa-2x">
                 
                 </i>
