--- a/templates/tabbar.latte
+++ b/templates/tabbar.latte
@@ -8,7 +8,7 @@
             </a>
         </div>
         <div>
-            <a href="#" title="Chats" aria-label="Chats">
+            <a href="{$siteroot}/chat-screen.php" title="Chats" aria-label="Chats">
                 <i class="fa fa-comment fa-2x">
                 </i>
             </a>
