--- a/main.css
+++ b/main.css
@@ -283,7 +283,7 @@ li {
     background-color: var(--tan);
     color: var(--black);
     padding: 10px;
-    border-radius: 20px;?>
+    border-radius: 20px;
     margin: 10px;
 }
 li h6 {
