--- a/templates/refreshing_html.latte
+++ b/templates/refreshing_html.latte
@@ -13,7 +13,7 @@
     function waitForMsg(){
         $.ajax({
             type: "GET",
-            url: "{$siteroot}/msg_poll.php",
+            url: "{{$siteroot}}/msg_poll.php",
 
             async: true,
             cache: false,
