use a local jquery

--- a/templates/refreshing_html.latte
+++ b/templates/refreshing_html.latte
@@ -4,7 +4,7 @@
         <title>Squad On Site</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{$siteroot}/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
