--- a/templates/refreshing_html.latte
+++ b/templates/refreshing_html.latte
@@ -34,7 +34,7 @@
 
     $(document).ready(function(){
         setTimeout(
-            function {
+            function () {
                 waitForMsg();
             }
             , 1000
