--- a/templates/refreshing_html.latte
+++ b/templates/refreshing_html.latte
@@ -20,7 +20,8 @@
             timeout:50000,
 
             success: function(data){
-                console.log(data);
+                window.location.reload();
+                location.reload();
             },
             error: function(XMLHttpRequest, textStatus, errorThrown){
                 console.log(textStatus + " (" + errorThrown + ")");
