added gaming news screen

--- a/templates/news-screen.latte
+++ b/templates/news-screen.latte
@@ -10,9 +10,39 @@
 
 {block main}
     <div class="screen-wrapper">
-        <h2>Our Purpose</h2>
-        <p class="textblock">Connecting with the gaming world is crucial for creating a place for SOS in the gaming market. Gamers who are involved with communities of other gamers already like Discord servers or a streamers community are very subject to the things and games that they promote.</p>
-        <p class="textblock">That can be used to SOS’s advantage and if you network throughout the gaming world you can find yourself in a much higher place than you were before.</p>
+        <div class="card-img news-img-0"></div>
+        <div class="card">
+            <h2>Elden Ring is Too Big</h2>
+            <p>Elden Ring's scale means that FromSoft has had to maximise what it gets out of various assets. This game has a lot of repetition in it, which is not necessarily a problem, but once you've seen the same boss crop up in a slightly different form four times, you do start to get a little bit ...</p>
+            <a class="button" style="user-select:none;" href="https://www.pcgamer.com/elden-ring-is-too-big/" draggable="false">
+                Read on pcgamer.com
+            </a>
+        </div>
+        <div class="card-img news-img-1"></div>
+        <div class="card">
+            <h2>Kirby and the Forgotten Land Gets New Nintendo Switch Online Freebies</h2>
+            <p>Kirby and the Forgotten Land Released on Nintendo Switch last month, and the game has quickly proven to be a critical and commercial success. It seems everyone is loving Kirby's latest adventure, so Nintendo Switch Online subscribers will likely be quite happy with the latest set of freebies ...</p>
+            <a class="button" style="user-select:none;" href="https://comicbook.com/gaming/news/kirby-and-the-forgotten-land-nintendo-switch-online-freebies-nso-platinum-points/" draggable="false">
+                Read on comicbook.com
+            </a>
+        </div>
+        <div class="card-img news-img-2"></div>
+        <div class="card">
+            <h2>Minecraft Wild Update Revealed</h2>
+            <p>Hoping to discover more about the Minecraft 1.19 update? Mojang has confirmed the next major version of Minecraft, teased us with its pieces, and it’s full of new biomes, mobs, and blocks. With the Wild update, Mojang is focused on two versions of "wild": both the great outdoors and the ...</p>
+            <a class="button" style="user-select:none;" href="https://www.pcgamer.com/minecraft-119-update-release-date-the-wild-update/" draggable="false">
+                Read on pcgamer.com
+            </a>
+        </div>
+        <div class="card-img news-img-3"></div>
+        <div class="card">
+            <h2>Rediscovering Slayers for SNES</h2>
+            <p>Slayers is based on an manga series of the same name (also known as Lina the Teenage Sorceress). The heroine of the manga (and of the game) is Lina Inverse, a seventeen-year-old girl who can use magic and is also proficient with the sword. Lina particularly likes money, and often robs rich people ...</p>
+            <a class="button" style="user-select:none;" href="https://www.mobygames.com/game/snes/slayers" draggable="false">
+                Read on mobygames.com
+            </a>
+        </div>
+        <p class="centered-textblock">Check back later for more curated gaming news.</p>
     </div>
 {/block}
 
