--- a/main.css
+++ b/main.css
@@ -16,6 +16,8 @@ html {
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    max-height: 100%;
 }
 .app-wrapper {
     height: 100vh;
@@ -231,6 +233,21 @@ p.textblock {
     margin-top:12px;
     margin-bottom:12px;
 }
+.card {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 0;
+    padding-bottom: 10px;
+    background-color:rgba(0,0,0,0.2);
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
+    margin-bottom:10px;
+}
+p.centered-textblock {
+    margin-top:12px;
+    margin-bottom:12px;
+    text-align:center;
+}
 p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
@@ -254,12 +271,41 @@ div.content-wrapper {
     padding-left:12px;
     padding-right:12px;
 }
+.card-img {
+    width:auto;
+    height:200px;
+    max-width:100%;
+    max-height:200px;
+    box-sizing:border-box;
+    background-color: #000;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top:10px;
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+.news-img-0 {
+    background-image: url("https://cdn.mos.cms.futurecdn.net/adKatgH3rMRLrK2yXg2ooF-1024-80.jpg.webp");
+    background-position:center;
+}
+.news-img-1 {
+    background-image: url("https://descontoemgames.com/wp-content/uploads/2021/09/Kirby-and-the-Forgotten-Land-1536x864.jpg");
+    background-position:bottom;
+}
+.news-img-2 {
+    background-image: url("https://cdn.mos.cms.futurecdn.net/CknA879W5bFP2CRSbJKnch-970-80.jpg.webp");
+    background-position:bottom;
+}
+.news-img-3 {
+    background-image: url("https://www.mobygames.com/images/shots/l/80153-slayers-snes-screenshot-title-screen.gif");
+    background-position:100% 20%;
+}
 .tabbar div {
     display: inline-grid;
 }
 .tabbar a {
     padding: 15px;
-    background-color:none;
+    background-color:unset;
     display:flex;
     text-decoration:none;
     color: var(--white);
