--- a/templates/tabbar.latte
+++ b/templates/tabbar.latte
@@ -1,28 +1,28 @@
 <nav>
     <div class="tabbar">
         <div>
-            <a href="#" title="Events" aria-label="Events">
-                <i class="fa fa-calendar-day fa-2x">
+            <a href="{$siteroot}/events-screen.php" title="Events" aria-label="Events">
+                <i class="fa fa-calendar-day">
                 
                 </i>
             </a>
         </div>
         <div>
             <a href="{$siteroot}/chat-screen.php" title="Chats" aria-label="Chats">
-                <i class="fa fa-comment fa-2x">
+                <i class="fa fa-comment">
                 </i>
             </a>
         </div>
         <div>
-            <a href="#" title="News" aria-label="News">
-                <i class="fa fa-newspaper fa-2x">
+            <a href="{$siteroot}/news-screen.php" title="News" aria-label="News">
+                <i class="fa fa-newspaper">
                 
                 </i>
             </a>
         </div>
         <div>
             <a href="{$siteroot}/settings-screen.php" title="Settings" aria-label="Settings">
-                <i class="fa fa-cog fa-2x">
+                <i class="fa fa-cog">
                 
                 </i>
             </a>
