--- a/templates/settings-screen.latte
+++ b/templates/settings-screen.latte
@@ -11,12 +11,12 @@
 {block main}
     <div class="content-wrapper" style="user-select:none;box-sizing:border-box;" draggable="false">
         <a class="button" style="user-select:none;" href="#" draggable="false">
-            Edit Profile
-        </a>
-        <a class="button" style="user-select:none;" href="#" draggable="false">
             Teams
         </a>
         <a class="button" style="user-select:none;" href="#" draggable="false">
+            Edit Profile
+        </a>
+        <a class="button" style="user-select:none;" href="{$siteroot}/linked-platforms-screen.php" draggable="false">
             Linked Platforms
         </a>
         <a class="button" style="user-select:none;" href="{$siteroot}/support-screen.php" draggable="false">
