made back button smaller and added back button to chat page

--- a/templates/about-screen.latte
+++ b/templates/about-screen.latte
@@ -2,7 +2,7 @@
 
 {block header}
     <a href="{$siteroot}/support-screen.php" title="Back" aria-label="Back">
-        <i class="fas fa-chevron-left fa-2x"></i>
+        <i class="fas fa-chevron-left"></i>
     </a>
     <div class="vertical-center">
         <h1>About Us</h1>
