--- a/templates/chat-screen.latte
+++ b/templates/chat-screen.latte
@@ -1,7 +1,9 @@
 {layout 'html.latte'}
 
 {block header}
-    <div></div>
+    <a href="{$siteroot}/news-screen.php" title="Back" aria-label="Back">
+        <i class="fas fa-chevron-left"></i>
+    </a>
     <div class="vertical-center">
         <h1>Chat</h1>
     </div>
