--- a/templates/support-screen.latte
+++ b/templates/support-screen.latte
@@ -2,7 +2,7 @@
 
 {block header}
     <a href="{$siteroot}/settings-screen.php" title="Back" aria-label="Back">
-        <i class="fas fa-chevron-left fa-2x"></i>
+        <i class="fas fa-chevron-left"></i>
     </a>
     <div class="vertical-center">
         <h1>Support</h1>
