--- a/templates/linked-platforms-screen.latte
+++ b/templates/linked-platforms-screen.latte
@@ -5,7 +5,7 @@
         <i class="fas fa-chevron-left"></i>
     </a>
     <div class="vertical-center">
-        <h1>Linked Platforms</h1>
+        <h1>Platforms</h1>
     </div>
     <div></div>
 {/block}
