--- a/templates/html-chat-view.latte
+++ b/templates/html-chat-view.latte
@@ -42,15 +42,9 @@
     </head>
     <body>
         <div class="app-wrapper dark">
-            <header>
-                {include header}
-            </header>
-            <main>
+            <div class="main" title="Chat View">
                 {include main}
-            </main>
-            <footer>
-                {include footer}
-            </footer>
+            </div>
         </div>
     </body>
 </html>
