created teams screen and hooked up settings screen

--- a/templates/settings-screen.latte
+++ b/templates/settings-screen.latte
@@ -10,7 +10,7 @@
 
 {block main}
     <div class="content-wrapper" style="user-select:none;box-sizing:border-box;" draggable="false">
-        <a class="button" style="user-select:none;" href="#" draggable="false">
+        <a class="button" style="user-select:none;" href="{$siteroot}/teams-screen.php" draggable="false">
             Teams
         </a>
         <a class="button" style="user-select:none;" href="#" draggable="false">
