added delete account screen

--- a/templates/support-screen.latte
+++ b/templates/support-screen.latte
@@ -21,6 +21,9 @@
         <a class="button" style="user-select:none;" href="{$siteroot}/terms-screen.php" draggable="false">
             Terms & Conditions
         </a>
+        <a class="button" style="user-select:none;" href="{$siteroot}/delete-account-screen.php" draggable="false">
+            Delete Account
+        </a>
     </div>
 {/block}
 
