--- a/templates/news-screen.latte
+++ b/templates/news-screen.latte
@@ -9,6 +9,24 @@
 {/block}
 
 {block main}
+    <style>
+    .news-img-0 {
+        background-image: url("https://cdn.mos.cms.futurecdn.net/adKatgH3rMRLrK2yXg2ooF-1024-80.jpg.webp");
+        background-position:center;
+    }
+    .news-img-1 {
+        background-image: url("https://descontoemgames.com/wp-content/uploads/2021/09/Kirby-and-the-Forgotten-Land-1536x864.jpg");
+        background-position:center;
+    }
+    .news-img-2 {
+        background-image: url("https://cdn.mos.cms.futurecdn.net/CknA879W5bFP2CRSbJKnch-970-80.jpg.webp");
+        background-position:bottom;
+    }
+    .news-img-3 {
+        background-image: url("https://www.mobygames.com/images/shots/l/80153-slayers-snes-screenshot-title-screen.gif");
+        background-position:100% 20%;
+    }
+    </style>
     <div class="screen-wrapper">
         <div class="card-img news-img-0"></div>
         <div class="card">
