--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ html {
     margin: 0;
     padding: 0;
     font-size: calc(18px + 0.5vw);
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 body {
     margin: 0;
@@ -187,6 +187,9 @@ select {
     text-align: center;
     color: var(--dark-blue);
 }
+input, select {
+    font-family: 'Roboto', sans-serif;
+}
 .form-checkbox {
     margin-bottom: 12px;
 }
@@ -229,7 +232,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.2);
 }
 p {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.4;
 }
 h1 {
@@ -274,6 +277,9 @@ p.centered-textblock {
 p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Rokkitt', sans-serif;
+}
 div.screen-wrapper {
     margin-left: 20px;
     margin-top: 12px;
@@ -309,22 +315,6 @@ div.content-wrapper {
     margin-top:10px;
     background-size:cover;
     background-repeat: no-repeat;
-}
-.news-img-0 {
-    background-image: url("https://cdn.mos.cms.futurecdn.net/adKatgH3rMRLrK2yXg2ooF-1024-80.jpg.webp");
-    background-position:center;
-}
-.news-img-1 {
-    background-image: url("https://descontoemgames.com/wp-content/uploads/2021/09/Kirby-and-the-Forgotten-Land-1536x864.jpg");
-    background-position:center;
-}
-.news-img-2 {
-    background-image: url("https://cdn.mos.cms.futurecdn.net/CknA879W5bFP2CRSbJKnch-970-80.jpg.webp");
-    background-position:bottom;
-}
-.news-img-3 {
-    background-image: url("https://www.mobygames.com/images/shots/l/80153-slayers-snes-screenshot-title-screen.gif");
-    background-position:100% 20%;
 }
 .tabbar div {
     display: inline-grid;
