--- a/templates/html-chat-view.latte
+++ b/templates/html-chat-view.latte
@@ -7,7 +7,7 @@
         <script src="{$siteroot}/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Rokkitt:wght@700&display=swap');
         </style>
         <script type="text/javascript" charset="utf-8">
     function waitForMsg(){
