--- a/templates/html-send-view.latte
+++ b/templates/html-send-view.latte
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Rokkitt:wght@700&display=swap');
         </style>
     </head>
     <body>
