--- a/templates/html.latte
+++ b/templates/html.latte
@@ -6,9 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{$siteroot}/main.css">
         <link rel="stylesheet" href="{$siteroot}/assets/font-awesome/css/all.min.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="{$siteroot}/assets/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="{$siteroot}/assets/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="{$siteroot}/assets/icons/favicon-16x16.png">
+        <link rel="manifest" href="{$siteroot}/assets/icons/site.webmanifest">
+        <link rel="mask-icon" href="{$siteroot}/assets/icons/safari-pinned-tab.svg" color="#aec6c1">
+        <link rel="shortcut icon" href="{$siteroot}/assets/icons/favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="SquadOnSite">
+        <meta name="application-name" content="SquadOnSite">
+        <meta name="msapplication-TileColor" content="#3c3c3c">
+        <meta name="msapplication-config" content="{$siteroot}/assets/icons/browserconfig.xml">
+        <meta name="theme-color" content="#3c3c3c">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Rokkitt:wght@700&display=swap');
+            .logo {
+                background-image: url("{$siteroot}/assets/logo/logo.svg");
+                width: 100%;
+                height: 250px;
+                background-size: cover;
+                background-position: center center;
+            }
         </style>
+        <link rel="shortcut icon" type="image/jpg" href="/favicon.jpg"/>
     </head>
     <body>
         <div class="app-wrapper dark">
