--- a/templates/signup-screen.latte
+++ b/templates/signup-screen.latte
@@ -10,6 +10,8 @@
 
 {block main}
     <div class="form-wrapper">
+        <h2>Squad On Site</h2>
+        <div class="logo"></div>
         <p class="form-msg">{$form_msg}</p>
         {$form->render()}
         <p class="debug-msg">{$form_result}</p>
