--- a/templates/html.latte
+++ b/templates/html.latte
@@ -12,11 +12,23 @@
         <link rel="manifest" href="{$siteroot}/assets/icons/site.webmanifest">
         <link rel="mask-icon" href="{$siteroot}/assets/icons/safari-pinned-tab.svg" color="#aec6c1">
         <link rel="shortcut icon" href="{$siteroot}/assets/icons/favicon.ico">
+        <meta name="description" content="If you network throughout the gaming world, you can find yourself in a much better place than you were before." />
+        <meta name="robots" content= "index, follow">
         <meta name="apple-mobile-web-app-title" content="SquadOnSite">
         <meta name="application-name" content="SquadOnSite">
         <meta name="msapplication-TileColor" content="#3c3c3c">
         <meta name="msapplication-config" content="{$siteroot}/assets/icons/browserconfig.xml">
         <meta name="theme-color" content="#3c3c3c">
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="{$siteroot}/login-screen.php">
+        <meta property="twitter:title" content="Squad On Site">
+        <meta property="twitter:description" content="If you network throughout the gaming world, you can find yourself in a much better place than you were before.">
+        <meta property="twitter:image" content="{$siteroot}/assets/icons/android-chrome-512x512.png">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="{$siteroot}/login-screen.php">
+        <meta property="og:title" content="Squad On Site">
+        <meta property="og:description" content="If you network throughout the gaming world, you can find yourself in a much better place than you were before.">
+        <meta property="og:image" content="{$siteroot}/assets/icons/android-chrome-512x512.png">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Rokkitt:wght@700&display=swap');
             .logo {
