--- a/templates/about-screen.latte
+++ b/templates/about-screen.latte
@@ -13,8 +13,8 @@
 {block main}
     <div class="screen-wrapper">
         <h2>Our Purpose</h2>
-        <p class="textblock">Connecting with the gaming world is crucial for creating a place for SOS in the gaming market. Gamers who are involved with communities of other gamers already like Discord servers or a streamers community are very subject to the things and games that they promote.</p>
-        <p class="textblock">That can be used to SOS’s advantage and if you network throughout the gaming world you can find yourself in a much higher place than you were before.</p>
+        <p class="textblock">Squad On Site is a community-centered chat application created for gamers. Schedule events, catch up on the latest gaming news, and talk with your friend groups quickly and easily.</p>
+        <p class="textblock">If you network throughout the gaming world, you can find yourself in a much better place than you were before.</p>
     </div>
 {/block}
 
