--- a/templates/events-screen.latte
+++ b/templates/events-screen.latte
@@ -9,6 +9,7 @@
 {/block}
 
 {block main}
+    <p class="centered-textblock">You have no events right now.</p>
     <ul n:if="!empty($events)" tabindex="0">
     {foreach $events as $item}
         <li>
