--- a/templates/events-screen.latte
+++ b/templates/events-screen.latte
@@ -9,7 +9,10 @@
 {/block}
 
 {block main}
-    <p class="centered-textblock">You have no events right now.</p>
+    <h2>Today</h2>
+    <p class="centered-textblock">There are no events right now.</p>
+    <h2>Upcoming</h2>
+    <p class="centered-textblock">There are no upcoming events.</p>
     <ul n:if="!empty($events)" tabindex="0">
     {foreach $events as $item}
         <li>
