add placeholder screens

--- a/templates/support-screen.latte
+++ b/templates/support-screen.latte
@@ -12,7 +12,7 @@
 
 {block main}
     <div class="screen-wrapper">
-        <a class="button" style="user-select:none;" href="#" draggable="false">
+        <a class="button" style="user-select:none;" href="{$siteroot}/report-screen.php" draggable="false">
             Report User
         </a>
         <a class="button" style="user-select:none;" href="{$siteroot}/about-screen.php" draggable="false">
