--- a/templates/settings-screen.latte
+++ b/templates/settings-screen.latte
@@ -13,7 +13,7 @@
         <a class="button" style="user-select:none;" href="{$siteroot}/teams-screen.php" draggable="false">
             Teams
         </a>
-        <a class="button" style="user-select:none;" href="#" draggable="false">
+        <a class="button" style="user-select:none;" href="{$siteroot}/edit-profile-screen.php" draggable="false">
             Edit Profile
         </a>
         <a class="button" style="user-select:none;" href="{$siteroot}/linked-platforms-screen.php" draggable="false">
